[tool.poetry]
name = "comfyui-headless"
version = "0.1.0"
description = "\"ComfyUI with a Modal-Powered PromptExecutor\""
authors = ["Derek Rodriguez <derek.rodriguez@pm.me>"]
license = "GPL v3.0"
readme = "README.md"
packages = [{include = "comfyui_headless"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchsde = "^0.2.6"
torchvision = "^0.17.0"
einops = "^0.7.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.3"
pyyaml = "^6.0.1"
pillow = "^10.2.0"
scipy = "^1.12.0"
tqdm = "^4.66.2"
psutil = "^5.9.8"
modal = "^0.62.175"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
